# RAGU

./: .env.example  .gitignore  AGENTS.md  Makefile  PLAN.md  README.md  install.sh  pyproject.toml
scripts/: query_ollama.py  reindex.py
src/: __init__.py
src/core/: config.py  ids.py  timing.py
src/domain/: models.py  protocols.py
src/ingest/: chunker.py  embedder.py  parser.py  source.py
src/retrieve/: dense.py  fusion.py  graph.py  lexical.py  planner.py  rerank.py  service.py
src/services/: indexing_service.py  query_service.py
src/storage/: chunk_repo.py  embedding_repo.py  link_repo.py  note_repo.py  sqlite_db.py  sqlite_schema.py
src/synth/: __init__.py  answerer.py  context_compiler.py  prompts.py
tests/integration/: test_indexing_service.py  test_reindex_script.py  test_retrieval_service.py
tests/unit/: test_chunker.py  test_config.py  test_context_compiler.py  test_dense.py  test_domain_models.py  test_ingest_parser.py  test_lexical.py  test_prompts.py  test_rerank.py
