[project]
name = "obsidian-rag"
version = "0.1.0"
description = "Local-first RAG over Obsidian-style Markdown notes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typing-extensions>=4.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
